--- a/Project_CV/Anna_Kohut.html
+++ b/Project_CV/Anna_Kohut.html
@@ -106,10 +106,7 @@
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco
                   laboris nisi ut aliquip ex ea commodo consequat. Duis aute
                   irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Ut enim ad minim veniam, quis
-                  nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                  commodo consequat. Duis aute irure dolor in reprehenderit in
-                  voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                  dolore eu fugiat nulla pariatur.
                 </p>
               </div>
 
@@ -176,7 +173,7 @@
                       </li>
                       <li class="duty">
                         Organisation work of the department. Recruitment and
-                        management of personnel;
+                        management of personnel.
                       </li>
                     </ul>
                   </li>
