correction about ne

--- a/Project_CV/Anna_Kohut.html
+++ b/Project_CV/Anna_Kohut.html
@@ -66,11 +66,11 @@
               <div class="skills">
                 <ul>
                   <h3>Skills</h3>
-                  <li>HTML, CSS, Bootstrap</li>
-                  <li>JavaScript</li>
-                  <li>Responsive design</li>
-                  <li>Communication skills</li>
-                  <li>Teamwork</li>
+                  <li class="skill">HTML, CSS, Bootstrap</li>
+                  <li class="skill">JavaScript</li>
+                  <li class="skill">Responsive design</li>
+                  <li class="skill">Communication skills</li>
+                  <li class="skill">Teamwork</li>
                 </ul>
               </div>
 
@@ -101,12 +101,12 @@
               <div class="bio">
                 <h3 class="bio">About me</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur.
+                  My name is Anna, and I'm a web developer, my passion is
+                  creating and developing effective web applications. I am
+                  committed to learning and self-development so that I can
+                  consistently achieve better results. My experience and love
+                  for development can enable me to help your business find the
+                  best solutions and reach its goals.
                 </p>
               </div>
 
