--- a/Project_CV/Anna_Kohut.html
+++ b/Project_CV/Anna_Kohut.html
@@ -99,7 +99,7 @@
           <div class="col-md-8">
             <section class="about-me">
               <div class="bio">
-                <h3 class="bio">About me</h3>
+                <h3>About me</h3>
                 <p>
                   My name is Anna, and I'm a web developer, my passion is
                   creating and developing effective web applications. I am
