changed photo and made corrections of responsive

--- a/Project_CV/index.html
+++ b/Project_CV/index.html
@@ -80,7 +80,12 @@
                   <li>
                     <h6>2022</h6>
                     <h4>FrontEnd Developer</h4>
-                    <h5>SheCodes</h5>
+                    <h5>Course.Online Front</h5>
+                  </li>
+                  <li>
+                    <h6>2022</h6>
+                    <h4>FrontEnd Developer</h4>
+                    <h5>Course.SheCodes</h5>
                   </li>
                   <li>
                     <h6>2010 - 2014</h6>
